--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +19,14 @@
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.6"
   }
 }
